--- a/BULK/index.html
+++ b/BULK/index.html
@@ -9,9 +9,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href=""><img src="" alt=""></a></li>
-                <li><a href=""><img src="" alt=""></a></li>
-                <li><a href=""><img src="" alt=""></a></li>
+                <li><a href="">hier moet die hamburgermenu<img src="" alt=""></a></li>
+                <li><a href=""><img src="images/bulk_logo.svg" alt="bulk_logo"></a></li>
+                <li><a href="">hier moet het winkelmandje<img src="" alt=""></a></li>
             </ul>
         </nav>
     </header>
@@ -20,7 +20,7 @@
     <main>
         <!--- zoek form --->
         <section>
-            <form action="search"></form>
+            <form action="search"> zoek </form>
             <img src="" alt="">
         </section>
 
@@ -32,76 +32,77 @@
         <!--- Image met korting en button erop --->
         <section>
             <img src="" alt="">
-            <button class="button_zwart"></button>
+            <button class="button_zwart">shop nu</button>
         </section>
 
 
         <!--- Nieuw product + tekst --->
         <section>
-            <img src="" alt="">
-            <button class="button_rood"></button>
+            <img src="images/potjes_banner.jpeg" alt="">
+            <button class="button_rood">Nieuw</button>
             <article>
-                <h2></h2>
-                <p></p>
+                <h2>Dit Zijn Onze Nieuwe Helden Voor Je Gezondheid</h2>
+                <p>Ondersteund door wetenschap, duurzaam een gericht. Ons nieuwe gezondheidsassortiment biedt je alles wat je nodig hebt om elke dag je best te doene zonder compromissen.</p>
             </article>
-            <button class="button_zwart"></button>
+            <button class="button_wit">shop nu</button>
         </section>
 
 
         <!--- Nieuw product + tekst --->
         <section>
-            <img src="" alt="">
-            <button class="button_rood"></button>
+            <img src="images/siroop_banner.jpeg" alt="">
+            <button class="button_rood">Nieuw</button>
             <article>
-                <h2></h2>
-                <p></p>
+                <h2>Gouden Siroopsmaak</h2>
+                <p>Wij houden van siroop. Wij houden van smaak. We houden ervan om goed te proeven en ons goed te voelen. Onze nieuwe, caloriearme Golden Syrup is hier om us smaakpapillen tevreden te stellen, zonder uw toning op te offeren</p>
             </article>
-            <button class="button_zwart"></button>
+            <button class="button_wit">shop nu</button>
         </section>
 
        <!--- Nieuwe producten potjes --->
         <section>
             <ul>
-                <h3></h3>
-                <li><img src="" alt=""><figcaption class="p3"></figcaption></p></li>
-                <li><img src="" alt=""><figcaption class="p3"></figcaption></p></li>
-                <li><img src="" alt=""><figcaption class="p3"></figcaption></p></li>
+                <h3>Nieuwe producten</h3>
+                <p>Deze nieuwe producten wachten op je...</p>
+                <li><img src="images/gist.jpg" alt=""><figcaption class="p3">GISTVLOKKEN</figcaption></p><p>9,99</p></li>
+                <li><img src="images/huid_capsules.jpg" alt=""><figcaption class="p3">   CAPSULES VOOR EEN GEZONDE HUID</figcaption></p><p>€32,49</p></li>
+                <li><img src="images/hart_capsules.jpg" alt=""><figcaption class="p3"></figcaption>CAPSULES VOOR EEN GEZOND HART</p><p>€35,99</p></li>
             </ul>
         </section>
 
         <!--- Our planet afbeelding --->
         <section>
             <ul>
-                <img src="" alt="">
+                <img src="images/ourplanet.png" alt="">
                 <article>
-                    <h1></h1>
-                    <p></p>
+                    <h1>ONZE PLANEET</h1>
+                    <p>Klimaatverandering is het grootste probleem waarmee onze wereldgemeenschap vandaag wordt geconfronteerd. Bij bulk zettten we ons in om een revolutie teeweeg te brengen in onze producten en om onze hele branche te veranderen. Klik verder om te weten hoe.</p>
                 </article>
-                <button class="button_wit"></button>
+                <button class="button_wit">Lees meer</button>
             </ul>
         </section>
 
 
         <!--- #thisisnutrition tekst --->
         <section>
-            <H6></H6>
+            <H6>#ThisisNutrition</H6>
             <p></p>
         </section>
 
 
         <!--- 3 images onder elkaar --->
         <section>
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <img src="images/logo_block.jpg" alt="">
+            <img src="images/zittende_man.jpg" alt="">
+            <img src="images/drinkende_vrouw.jpg" alt="">
         </section>
 
         <!--- contactform met button --->
         <section>
-            <h2></h2>
-            <p class="zwarte_p_tekst"></p>
-            <form action=""></form>
-            <button class="button_zwart"></button>
+            <h2>BLIJF IN CONTACT</h2>
+            <p class="zwarte_p_tekst">Zin in kortingen en fitness-tips rechtstreeks in je inbox? Je weet wat je moet doen.</p>
+            <form action="">Vul hier jouw e-mailadres in</form>
+            <button class="button_zwart">inschrijven</button>
             <img src="" alt="">
         </section>
 
@@ -109,36 +110,30 @@
         <!--- gratis levering --->
         <section>
             <img src="" alt="">
-            <h4></h4>
-            <p></p>
-            <button class="button_wit"></button>
+            <h5>Gratis Levering</h5>
+            <p>Gratis levering bestellingen boven €50</p>
+            <button class="button_wit">MEER</button>
         
         <!--- beveel een vriend aan --->
             <img src="" alt="">
-            <h4></h4>
-            <p></p>
-            <button class="button_wit"></button>
+            <h5>Beveel Een Vriend Aan</h5>
+            <p>Zin in een korting van €10? Dit kan zeker als je een vriend kennis laat maken met bulk.</p>
+            <button class="button_wit">MEER</button>
         
         <!--- this is nutrition --->
             <img src="" alt="">
             <h4></h4>
-            <p></p>
-            <button class="button_wit"></button>
+            <p>Nieuwe look, dezelfde ongelooflijke kwaliteit, prestaties en smaken.</p>
+            <button class="button_wit">ONTDEK MEER</button>
         </section>
 
-        <!--- trustpilot stukje --->
-        <section>
-            <!--- H??? --->
-            <img src="" alt="">
-            <!--- p??? zitten 2 verschillende teksten in --->
-            <img src="" alt="">
-        </section>
+        <!--- trustpilot stukje  geskipt--->
     </main>
 
 
 
     <footer>
-        <!--- social media buttons --->
+        <!--- social media icons --->
         <section>
             <ul>
                 <li><a href=""><img src="" alt=""></a></li>
@@ -151,25 +146,16 @@
         <!--- links naar andere pages --->
         <section>
             <ul>
-                <li><a href=""><p class="zwarte_p_tekst"></p></li>
-                <li><a href=""><p class="zwarte_p_tekst"></p></li>
-                <li><a href=""><p class="zwarte_p_tekst"></p></li>
+                <li><a href=""><p class="zwarte_p_tekst">Contacteer ons</p></li>
+                <li><a href=""><p class="zwarte_p_tekst">Over ons</p></li>
+                <li><a href=""><p class="zwarte_p_tekst">Leveringsinformatie</p></li>
+                <li><a href=""><p class="zwarte_p_tekst">Affiliate Programma</p></li>
+                <li><a href=""><p class="zwarte_p_tekst">Carrières</p></li>
+                <li><a href=""><p class="zwarte_p_tekst">bulk NL Reviews</p></li>
             </ul>
         </section>
 
         <!--- betaalmethoden --->
-        <section>
-            <ul>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-                <li class=""><img src="" alt=""></a></li>
-            </ul>
-        </section>
     </footer>
 </body>
 </html>
